--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@ai-sdk/openai": "^2.0.0-beta.16",
     "ai": "^5.0.0-beta.34",
     "dotenv": "^16.6.1",
+    "fast-xml-parser": "^5.2.5",
     "openai": "^5.15.0",
     "zod": "^4.0.17"
   }
